Related: tdf#129933 assert on pasting over selection in edit

when its selected right to left with cursor flashing at the start

format->paragraph->area->color->pick, cursor into hex# edit, end to
cursor at the end, shift + home to select all, right to left, ctrl+c,
ctrl+v, assert

Change-Id: I8e29108ddff94487c298bd5e6607b98f5f841afd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87886
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>